--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
   integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
   crossorigin="anonymous"
 />
+  <audio id='music' controls loop autoplay style="display: none; width:0;">
+    <source src="music.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
+<!-- <iframe id='music' src="music.mp3 " allow='autoplay' loop='true' style="display: none"></iframe> -->
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
