Changed music problems

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
   integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
   crossorigin="anonymous"
 />
-  <audio id='music' controls loop autoplay style="display: none; width:0;">
-    <source src="music.mp3" type="audio/mp3">
+  <audio id='music' autoplay controls loop src="music.mp3" style="display: none; width: 0">
     Your browser does not support the audio element.
   </audio>
     <meta name="theme-color" content="#000000" />
